[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_InfoPanel_HeaderBackground.png" type="Texture" id=2]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_InfoPanel.gd" type="Script" id=3]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_InfoPanel_BodyBackground.png" type="Texture" id=4]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_InfoPanel_AboutIcon.png" type="Texture" id=5]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_InfoPanel_TopDownBorder.png" type="Texture" id=6]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_EmblemButton/EmblemButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_PointIndicator_Background.png" type="Texture" id=8]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_InfoPanel/704_PointIndicator_Frame.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 1 )

[node name="704_InfoPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 100.0
margin_bottom = 80.0
size_flags_vertical = 2
custom_constants/separation = 0

[node name="TopMarginer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 100.0
margin_bottom = 13.0

[node name="HeaderMarginer" type="MarginContainer" parent="VBoxContainer/TopMarginer"]
margin_right = 42.0
margin_bottom = 13.0
size_flags_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TopMarginer/HeaderMarginer"]
margin_right = 42.0
margin_bottom = 13.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopMarginer/HeaderMarginer"]
margin_left = 7.0
margin_right = 35.0
margin_bottom = 13.0
size_flags_horizontal = 6
custom_constants/margin_top = 3

[node name="HeaderLabel" type="Label" parent="VBoxContainer/TopMarginer/HeaderMarginer/MarginContainer"]
margin_top = 3.0
margin_right = 28.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "Emblems"

[node name="AboutButton" type="TextureButton" parent="VBoxContainer/TopMarginer"]
margin_left = 86.0
margin_right = 100.0
margin_bottom = 13.0
size_flags_horizontal = 10
texture_normal = ExtResource( 5 )

[node name="TopBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 13.0
margin_right = 100.0
margin_bottom = 14.0
texture = ExtResource( 6 )

[node name="BodyMarginer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 100.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 65 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer"]
margin_right = 100.0
margin_bottom = 65.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="BodyContainer" type="Control" parent="VBoxContainer/BodyMarginer"]
margin_right = 100.0
margin_bottom = 65.0

[node name="EmblemButtonFire" parent="VBoxContainer/BodyMarginer/BodyContainer" instance=ExtResource( 7 )]
margin_left = 13.0
margin_top = 9.0
margin_right = 40.0
margin_bottom = 36.0

[node name="EmblemButtonToughnessPierce" parent="VBoxContainer/BodyMarginer/BodyContainer" instance=ExtResource( 7 )]
margin_left = 59.0
margin_top = 9.0
margin_right = 86.0
margin_bottom = 36.0

[node name="EmblemButtonExplosive" parent="VBoxContainer/BodyMarginer/BodyContainer" instance=ExtResource( 7 )]
margin_left = 36.0
margin_top = 31.0
margin_right = 63.0
margin_bottom = 58.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BodyMarginer/BodyContainer"]
margin_left = 42.0
margin_top = 2.0
margin_right = 58.0
margin_bottom = 18.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PointsIndicatorFrame" type="TextureRect" parent="VBoxContainer/BodyMarginer/BodyContainer/MarginContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 9 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/BodyMarginer/BodyContainer/MarginContainer"]
margin_right = 16.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer/BodyContainer/MarginContainer/CenterContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 15.0
margin_bottom = 15.0
texture = ExtResource( 8 )

[node name="PointsMarginer" type="MarginContainer" parent="VBoxContainer/BodyMarginer/BodyContainer/MarginContainer"]
margin_left = 5.0
margin_right = 11.0
margin_bottom = 16.0
size_flags_horizontal = 6
custom_constants/margin_top = 2

[node name="PointsLabel" type="Label" parent="VBoxContainer/BodyMarginer/BodyContainer/MarginContainer/PointsMarginer"]
margin_top = 3.0
margin_right = 6.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 100.0
margin_bottom = 80.0
texture = ExtResource( 6 )
